Update UAS_JST_Harun Al Rasyid.ipynb

--- a/UAS_JST_Harun Al Rasyid.ipynb
+++ b/UAS_JST_Harun Al Rasyid.ipynb
@@ -278,7 +278,7 @@
         "outputId": "a39c4e89-05f3-4365-8e8a-ddb1ec033a04"
       },
       "source": [
-        "# visualisasi hasil data training (Plot accuracy & loss model)\n",
+        "# Training dataset\n",
         "\n",
         "\n",
         "\n",
